backend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: insurance-backend
  name: insurance-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: insurance-backend
    spec:
      containers:
      - image: rashwinnonda/insurance_backend
        name: insurance-backend-99ksm
        ports:
          - name: http
            containerPort: 9090
      - image: rashwinnonda/lmb
        name: lmb
        ports:
            - name: http
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: insurance-backend
  name: insurance-backend
spec:
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app: insurance-backend
  type: NodePort
