backend/kubernetes/react_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: insurance-frontend
  name: insurance-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: insurance-frontend
    spec:
      containers:
      - image: pratj97/insurance-frontend:v3
        name: insurance-frontend
        ports:
          - name: http
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: insurance-frontend
  name: insurance-frontend
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: insurance-frontend
  type: NodePort
