backend/kubernetes/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: insurance-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ibazaar.com
    http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: insurance-frontend
            servicePort: 3000
        - path: /backend/?(.*)
          backend:
            serviceName: insurance-backend
            servicePort: 9090
